2006-07-10  Sami Wagiaalla  <swagiaal@redhat.com>

	* observers/TaskSyscallObserver.java (TaskSyscallObserver): Fixed names
	of actionPonts (part of fix for 2886).
	* observers/ObserverRoot.java: Removed name of GenericActionPoint.
	Added javadoc (part of fix for 2886).
	* actions/ShowSourceWin.java (ShowSourceWin): Fixed name of action (part of 
	fix for 2886).
	* actions/ActionManager.java: Removed stop/resume Actions (part of fix for 2886).
	* SimpleComboBox.java: Added support for default/no selection text (part of fix for 2886).
	* ObserverItemsTable.java: Decremeted the row number when
	a row is removed (part of fix for 2886).
	* FilterRow.java: Added clearing of widgets when a row is
	unapplied (part of fix for 2886).
	* ObserverItemRow.java: Ditto.
	* EditObserverDialog.java: Removed the frame around the table.
	* LiaisonItem.java: Added javadoc.
	* Combo.java: Ditto.
	* actions/ActionPoint.java: Ditto.

2006-07-07  Adam Jocksch  <ajocksch@redhat.com>

	* WindowManager.java (registerWindow): Removed.
	(initRegisterWindow): Ditto.
	(save): Removed registerWindow related code.
	(load): Ditto.

2006-07-07  Phil Muldoon  <pmuldoon@redhat.com>

	* ProcWiseDataModel.java: (ProcDestroyedObserver): Applied correct process
	verb. Removed redundant split check.
	(ProcCreatedObserver): Ditto.

2006-07-06  Phil Muldoon  <pmuldoon@redhat.com>

	* ProcWiseDataModel.java: Apply GNU Format.
	(ProcDestroyedObserver): Removed PIDS and leaf nodes.Show only flat model.
	(ProcCreatedObserver): Ditto.

2006-07-06  Nurdin Premji  <npremji@redhat.com>

	* StatusWidget.java (StatusWidget): Uncommented resize, it has been 
	implemented.
	* SessionProcDataModel.java (addProc): Fixed typo in error log.
	* SessionProcTreeView.java: Added some comments.

2006-07-06  Sami Wagiaalla  <swagiaal@redhat.com>

	* observers/ObserverRoot.java (setInfo): Added calls to update
	event logs.
	* StatusWidget.java: Commented out log actions added at runtime.